Implement redirection on uploda
